# pepodds21

./: .env  CLAUDE.md  CONTEXT.md  DEPLOYMENT_LOG_2026_04_27.md  IMPLEMENTATION_STATUS.md  PEPODDS21.webloc  railway.json
codice/backend/: .env  Dockerfile  PLAYER_PROPS_DESIGN.md  celerybeat-schedule  pyproject.toml
codice/backend/alembic/: env.py
codice/backend/alembic/versions/: 001_initial_schema.py  002_scalata_and_enhancements.py  003_enhanced_schema.py  004_scalata_bet_integration.py  005_add_unique_opportunity_constraint.py  006_add_analysis_status_tracking.py
codice/backend/app/: config.py  main.py
codice/backend/app/agents/: agents.py  base.py  bet_builder.py  consensus.py  nba_absence_pipeline.py  pipeline.py  player_props_pipeline.py  risk_engine.py  synthesis.py  tiers.py
codice/backend/app/api/: auth.py  deps.py
codice/backend/app/api/routers/: analytics.py  bankroll.py  bets.py  (+8 more)
codice/backend/app/core/: security.py
codice/backend/app/db/: base.py  session.py
codice/backend/app/services/: betting_advisor.py  decision_engine.py  dunkest_client.py  firecrawl_service.py  football_data_client.py  football_news_service.py  health.py  ingestion_service.py  kelly_service.py  nba_fixtures_client.py  nba_matchup_client.py  nba_news_client.py  news_scraper.py  odds_fetcher.py  odds_fixtures_client.py  prop_scalata_service.py  risk_monitor.py  scalata_service.py  settlement_service.py  sofascore_client.py  stats_fetcher.py  telegram_service.py  tennis_fixtures_client.py  whoscored_client.py
codice/backend/app/workers/: celery_app.py  tasks.py
(+40 files in other folders)
