[tool.poetry]
name = "sports-quant-fund"
version = "0.1.0"
description = "Autonomous Sports Quant Fund — AI multi-agent betting system"
authors = ["Giuseppe Siracusa"]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# Auth
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.1"   # passlib incompatible with bcrypt 5.x
python-multipart = "^0.0.9"

# Config
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"

# HTTP client
httpx = "^0.27.0"
tenacity = "^8.3.0"

# Celery
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.4"

# AI
anthropic = ">=0.40.0"

# Sports data
nba_api = "^1.4.1"

# Telegram
python-telegram-bot = "^21.1.1"

# Utils
python-dateutil = "^2.9.0"
rapidfuzz = "^3.6.0"  # [BUG #2 FIX] Fuzzy string matching for team name settlement

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"   # for TestClient
black = "^24.4.2"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
